test/visibility/import/rename/renamePrivate.good
renamePrivate.chpl:5: error: Bad identifier in rename, 'bar' is private
